--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
     "lucide-react": "^0.553.0",
-    "p14hrnet-plugin": "^1.0.2",
+    "p14hrnet-plugin": "^1.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "sass": "^1.94.0"
   },
