--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "lucide-react": "^0.553.0",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
